# Dereks-Python-Templete

./: .gitignore  README.md  README.md.jinja  copier.yml  lefthook.yaml.jinja  pyproject.toml  pyproject.toml.jinja  requirements.txt
.github/workflows/: build.yaml.jinja
docs/: developer_notes.md
src/boid/: __init__.py  __main__.py
src/{{ package_name }}/: __init__.py.jinja  __main__.py.jinja
tests/: test_{{ package_name }}.py.jinja
