[project]
name = "boid"
version = "0.0.0"
dependencies = []
requires-python = ">=3.13"
authors = [
  { name = "Derek R. Neilson", email = "derekneilson@mail.weber.edu" },
]
description = "A Python flocking simulation."
readme = "README.md"
license = "Unlicense"
license-files = ["LICENSE*"]
keywords = ["physics", "boid", "simulation", "flocking"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python :: 3 :: Only",
]

[project.scripts]
boid = "boid.__main__:main"

[project.urls]
Repository = "https://github.com/dwerkjem/boids"
Issues = "https://github.com/dwerkjem/boids/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "lefthook>=2.1.6",
  "pytest>=8.4.2",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.12",
]

[tool.coverage.report]
fail_under = 100
omit = ["*/__main__.py"]

[tool.coverage.run]
source = ["boid"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D"]
